unpackaged/main/default/objects/fferpcore__CompanySite__c/fferpcore__CompanySite__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__CompanySiteHelp</customHelpPage>
    <description>Stores site details for specific companies.</description>
    <label>Company Site</label>
    <nameField>
        <label>Company Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>