unpackaged/main/default/objects/fferpcore__CompanySite__c/fields/fferpcore__City__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__City__c</fullName>
    <description>Company site address city.</description>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>