unpackaged/main/default/objects/fferpcore__CompanySite__c/fields/fferpcore__Company__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Company__c</fullName>
    <description>Company to which this company site relates.</description>
    <label>Company</label>
    <referenceTo>fferpcore__Company__c</referenceTo>
    <relationshipLabel>Company Sites</relationshipLabel>
    <relationshipName>CompanySites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>