unpackaged/main/default/objects/fferpcore__CompanySite__c/fields/fferpcore__IsAddressValidated__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__IsAddressValidated__c</fullName>
    <description>Indicates that the company site address has been validated against the addresses in the external tax calculation service.</description>
    <formula>NOT
            ( ISBLANK(fferpcore__Street__c) &amp;&amp;
              ISBLANK(fferpcore__City__c) &amp;&amp;
              ISBLANK(fferpcore__State__c) &amp;&amp;
              ISBLANK(fferpcore__PostalCode__c) &amp;&amp;
              ISBLANK(fferpcore__Country__c)
            ) &amp;&amp;
            ( fferpcore__Street__c  =  fferpcore__ValidatedStreet__c ) &amp;&amp;
            ( fferpcore__City__c =  fferpcore__ValidatedCity__c ) &amp;&amp;
            ( fferpcore__State__c =  fferpcore__ValidatedState__c ) &amp;&amp;
            ( fferpcore__PostalCode__c =  fferpcore__ValidatedPostalCode__c ) &amp;&amp;
            ( fferpcore__Country__c =  fferpcore__ValidatedCountry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates that the company site address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
    <label>Address Validated</label>
    <type>Checkbox</type>
</CustomField>