unpackaged/main/default/objects/fferpcore__CompanySite__c/fields/fferpcore__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__PostalCode__c</fullName>
    <description>Company site address postal code.</description>
    <label>Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>