unpackaged/main/default/objects/fferpcore__CompanySite__c/fields/fferpcore__State__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__State__c</fullName>
    <description>Company site address state/province.</description>
    <label>State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>