unpackaged/main/default/objects/fferpcore__CompanySite__c/fields/fferpcore__Street__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Street__c</fullName>
    <description>Company site address street.</description>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>