unpackaged/main/default/objects/fferpcore__CompanySite__c/fields/fferpcore__ValidatedStreet__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ValidatedStreet__c</fullName>
    <description>Address street validated by the external tax calculation service.</description>
    <label>Validated Street</label>
    <type>TextArea</type>
</CustomField>