unpackaged/main/default/objects/fferpcore__CompanySite__c/listViews/fferpcore__All.listView-meta.xml
<ListView>
    <fullName>fferpcore__All</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__Company__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>